--- a/css/style.css
+++ b/css/style.css
@@ -53,12 +53,23 @@ box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
     height: 200px;
     border-radius: 15px;
     padding: 15px;
-    background-color: red;
+    background-image: url(/media/img/d4583b81da55f3ac0cc8806a3d39f680.jpg);
+    background-position: center;
+    background-size: cover;
     -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);  
     box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);  
 }
-
+.libro:hover{
+    transition: .2s;
+    transform: scale(1.1);
+}
+.titulo{
+    display: none;
+}
+.titulo:hover{
+  display: inline;
+}
 .footer{
     display: flex;
     flex-flow: row nowrap;
